# training_leetcode

./: .gitignore  LeetCode.sln  LeetCode.sln.DotSettings
C#/: LeetCode.sln  LeetCode.sln.DotSettings
C#/LeetCode/: LeetCode.csproj
C#/Sandbox/: BitTools.cs  CompareResults.cs  Program.cs
C#/TestLeetCode/: 11_ContainerWithMostWater.cs  121_TestBestTimeToBuyAndSellStock.cs  128_TestlongestConsecutiveSequence.cs  136_TestSingleNumber.cs  13_TestRomanToInteger.cs  141_TestLinkedListCycle.cs  143_TestReorderList.cs  14_TestLongestCommonPrefix.cs  150_TestReversePolishNotation.cs  155_TestMinimumStack.cs  15_TestThreeSum.cs  167_TestTwoSumII.cs  169_TestMajorityElement.cs  189_TestRotateArray.cs  18_TestFourSome.cs  190_TestReverseBits.cs  191_TestNumberOfBitsSet.cs  1929_TestsConcatenationOfArray.cs  1_TestTwoSums.cs  206_TestReverseLinkedList.cs  209_TestMinimumSizeSubarraySum.cs  20_TestValidParenthesis.cs  217_TestContainsDuplicate.cs  219_TestContainsDuplicateII.cs  21_TestMergeSortedLists.cs  22_TestGenerateParenthesis.cs  238_TestProductOfArrayExceptSelf.cs  242_TestValidAnagram.cs  268_TestMissingNumber.cs  26_TestRemoveDuplicatesFromSortedArray.cs  274_TestEncodeDecodeString.cs  27_TestRemoveElement.cs  (+22 more)
LeetCode/: LeetCode.csproj
Python/: pyproject.toml  results.xml
Python/src/leetcode/: main.py
Python/src/leetcode/Arrays/NeetCode150/: TwoSums.py
Python/tests/: test_dummy_main.py
Python/tests/Arrays/NeetCode150/: TestTwoSum.py
Sandbox/: MeasureExecutionTime.cs  Program.cs  Sandbox.csproj
TestLeetCode/: MeasureExecutionTime.cs  TestLeetCode.csproj
(+192 files in other folders)
